--- a/doom.html
+++ b/doom.html
@@ -28,10 +28,9 @@
 </div>
 <br>
 
-<input type='file' id='fileloader'></input><br><br>
+<input type='file' id='fileloader'></input><br><input type='checkbox' id='background'>Black Background</input><br>
 
 <div id='description' style='font-family: Courier; font-size:10px'>
-
 Free shareware files can be obtained: <a href="http://www.dosgamers.com/dos/dos-games/doom-heretic-hexen">here</a>. This tool is currently optimised for the Doom shareware WAD.</div> <br>
 
 <button id='image_tab' onclick="toggleVis('images')">Images</button><button id='flat_tab' onclick="toggleVis('flats')">Floor/Ceiling Textures</button>
